--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,19 @@
-.home-container {
+
+
+    /* make video under nav */
+  .content-footer-container {
     position:absolute;
-    top:0;
+    top: -15vh;
     z-index: -1;
-}
+    width: 100%;
+    overflow: hidden;
+  }
 
+  @media screen and (max-width: 992px) {
 
-.footer-container {
-    position: static;
-    bottom:0;
-}
+    /* resize video to make brand logo fit within small screen */
+    .content-footer-container {
+        top: 0;
+    }
 
+  }
