--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,10 @@
-
+.video-wrapper {
+ /*
+  position:absolute;
+  top: 0%;
+  z-index: -1;
+  */
+}
 
 
 video {
@@ -9,15 +15,28 @@ video {
 
     overflow: hidden;
 
+    
+   
+
   }
 
   @media screen and (max-width: 992px) {
 
-    /* resize video to make brand logo fit within small screen */
+    /* resize video to make brand logo fit within small screen 
+    unless it will too big  */
     video {
-        width: 1500px;
-        height: auto;
-       
+        width: auto;
+        height: 100vh;
+    }
+  }
+
+  @media screen and (min-width: 992px) {
+
+    /* make brand logo be in a middle of big screen */
+    video {
+      min-width: 100vw;
+      height: auto;
+      min-height: 130vh; /* compensate Home component -> position top : -15vh * in App.css */
     }
 
   }
@@ -27,6 +46,7 @@ video {
     width: 100%;
     height: 300px;
     background-color: blueviolet;
+    overflow: hidden;
 }
 
 
