--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 .navbar {
-    background-color: rgba(238, 222, 210, 0.616);
+    background-color: rgba(232, 212, 195, 0.616);
+
+  /*  background-color: rgba(238, 222, 210, 0.616);*/
+    
 }
 
+#reserve-button {
+  height: 5.5em;
+  margin-top: 0em;
+  border-width: 2.5px;
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.7rem;
+  font-weight: 800;
+  letter-spacing: 1.7px;
+  color:rgb(0, 0, 0);
+  
+  
+}
+
+.text-reserve-button {
+    padding-left: 2em;
+    padding-right: 2em;
+
+}
+
+
+#reserve-button:hover {
+    color:whitesmoke;
+
+}
+
+
+.testFont {
+    margin-right: 2em;
+  /*  font-family: 'Roboto';*/
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.7rem;
+    font-weight: 800;
+    letter-spacing: 1.7px;
+    color:rgb(255, 0, 0);
+}
+
+a.nav-link {
+   
+    margin-right: 2em;
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.7rem;
+    font-weight: 800;
+    letter-spacing: 1.7px;
+    color:rgb(0, 0, 0);
+    
+}
+
+a.nav-link:focus {
+
+    border-bottom: 1px solid #333;
+    color:black;
+   
+}
+
+a.nav-link:hover  {
+    color:black;
+}
 
 .logoBrand {
     max-width: 200px;
@@ -16,7 +79,7 @@
 @media screen and (max-width: 992px) {
 
     .navbar {
-        background-color: rgba(238, 222, 210, 1);
+        background-color: rgba(232, 212, 195, 1);
     }
 
     .logoBrand {
@@ -30,6 +93,17 @@
         top: 20%;
         left:35%;
     }
+
+    a.nav-link {
+      width:max-content;
+      font-size: 1.5rem;
+      margin-bottom: 0.7em; 
+   }
+
+   #reserve-button {
+    height: 5.5em;
+ }
+   
 }
 
 .navbar-toggler {
@@ -79,13 +153,13 @@
 }
 
 .menu-icon.open::after {
-    background-color: rgb(255, 0, 0);
+ 
     transform:translateY(-5px) rotate(45deg);
 
     }
 
 .menu-icon.open::before {
-    background-color: rgb(255, 0, 0);
+  
     transform:translateY(-5px) rotate(-45deg);
     
 }
