--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,8 +4,20 @@
   top: 0%;
   z-index: -1;
   */
+  background-color: var(--main-bg-color);
+ 
+
 }
 
+.background-container {
+  
+  background-color: var(--main-bg-color);
+  padding:0;
+  margin:0;
+
+  font-family: var(--main-font);
+  color: var(--main-font-color);
+}
 
 video {
    
@@ -28,6 +40,63 @@ video {
         width: auto;
         height: 100vh;
     }
+
+    div.card-home {
+       width:90%;
+  }
+
+  .card img#card-img-home {
+ 
+    
+   
+    
+  }
+ 
+  .card div.card-body-home {
+   
+   
+    
+  }
+
+
+  }
+
+  @media screen and (max-width: 500px) {
+
+    div.card-horizontal {
+    
+      display: flex;
+      flex-direction: column;
+      height: max-content;
+      max-height: min-content;
+  }
+    div.card-home {
+      width: 85%;
+    }
+
+    div.img-fluid {
+   
+      width: 100%;
+     height: auto;
+     max-width: 100%;
+     padding-bottom: 0%;
+    }
+
+    div.card-body-home {
+      width: 100%;
+      padding:0%;
+     margin:0%;
+        
+         
+    }
+
+    div h5.card-title-home {
+      padding-top: 1em;
+    
+      
+    }
+ 
+
   }
 
   @media screen and (min-width: 992px) {
@@ -42,6 +111,70 @@ video {
   }
 
 
+  .card-home {
+   width: 90%;
+   max-width: max-content;
+
+   background-color: var(--card-bg-color);
+  
+  }
+
+  .card-horizontal {
+    display: flex;
+    flex-direction: row-reverse;
+  /*  flex: 1 1 auto;*/
+    height: max-content;
+    width: 100%;
+
+    background-color: var(--card-bg-color);
+    
+}
+
+.img-fluid {
+  width:50%;
+  height:auto;
+  flex: 1 1 50%;
+  
+}
+
+.card-body-home {
+  width: 50%;
+  max-width: 700px;
+  flex: 1 1 50%;
+  background-color: var(--card-bg-color);
+  max-height: 100%;
+
+}
+
+.card-body-home p {
+ 
+  font-size: calc((0.6) * 0.3vw + 1rem);
+  font-weight: 600;
+  letter-spacing: 1.7px;
+ 
+}
+
+.card-body-home h5 {
+ 
+  font-size: calc((0.8) * 1.2vw + 1rem);
+  font-weight: 800;
+  letter-spacing: 1.7px;
+ 
+}
+
+h5.card-title-home {
+  padding-top:5%;
+  margin-bottom: 15%;
+}
+
+
+ .book-private {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 1.5px;
+
+}
+
 .testDiv {
     width: 100%;
     height: 300px;
@@ -50,3 +183,29 @@ video {
 }
 
 
+#up-coming-dinner-button {
+  height: 6em;
+  
+  border-width: 2.5px;
+  font-family: var(--main-font);
+  font-size: 1rem;
+  font-weight: 800;
+  letter-spacing: 1.7px;
+  color:rgb(0, 0, 0);
+  
+  
+}
+
+.text-dinner-button {
+    padding-left: 2em;
+    padding-right: 2em;
+   
+
+   
+}
+
+
+#up-coming-dinner-button:hover {
+    color:whitesmoke;
+
+}
