--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -51,19 +51,7 @@ video {
        width:90%;
   }
 
-  .card img#card-img-home {
- 
-    
-   
-    
-  }
- 
-  .card div.card-body-home {
-   
-   
-    
-  }
-
+  
 
   }
 
@@ -80,7 +68,7 @@ video {
       width: 85%;
     }
 
-    div.img-fluid {
+    div.img-fluid#home-card-img {
    
       width: 100%;
      height: auto;
@@ -138,7 +126,7 @@ video {
     
 }
 
-.img-fluid {
+.img-fluid#home-card-img {
   width:50%;
   height:auto;
   flex: 1 1 50%;
@@ -241,53 +229,21 @@ h5.card-title-home {
  color: var(--main-font-color);
 }
 
+
 .bottom-grid-home .box img {
-  width:100%;
-  height:auto;
-}
 
-div.modal {
-  background-color: aquamarine;
-  z-index: 99999;
-}
-
-
-
-div .modal .btn-close {
-  color: chartreuse;
-  background-color: coral;
-  z-index: 9999;
-}
-
-
-div .modal-body {
-  background-color: crimson;
-  width: 100%;
-}
-
-div .modal-body iframe {
-  width: auto;
-  height: 60vh;
+ width: 100%;
+ height: 250px;
+ max-height: 250px;
+ object-fit: cover;
  
 }
 
-div .modal .modal-backdrop {
-  background-color: blueviolet;
-  z-index: 0;
+
+
+#app-modal-img img {
+  width:100%;
+  height:auto;
+ 
 }
 
-.modal-dialog {
-  background-color: blueviolet;
-  width: 100%;
-}
-
-#exampleModal {
-  background-color: rgb(0, 180, 15);
-
-}
-
-
-.modal img {
-  width: 100%;
-  height: auto;
-}
