--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,12 +13,12 @@
   height: 5.5em;
   margin-top: 0em;
   border-width: 2.5px;
-
+  border-color: var(--main-font-color);
   
   font-size: 0.7rem;
   font-weight: 800;
   letter-spacing: 1.7px;
-  color:rgb(0, 0, 0);
+  color:var(--main-font-color);
   
   
 }
@@ -32,7 +32,7 @@
 
 #reserve-button:hover {
     color:whitesmoke;
-
+    background-color: var(--main-font-color);
 }
 
 
