--- a/src/components/About.css
+++ b/src/components/About.css
@@ -3,23 +3,186 @@
     /* shift this element down unless it will be cover by Nav */
     padding-top: calc(7em + 0vh);
     margin-top: calc(0em + 15vh);
-
-    width:100vw;
-    height:100vh;
-    
+   
+    min-height: 100vh;
+   
     background-color: var(--main-bg-color);
+
+    font-family: var(--main-font);
+    color: var(--main-font-color);
 
 }
 
 
+div p.card-text-about {
 
-@media screen and (max-width: 992px) {
 
-     /* because parent ( content-footer-container ) is absolute */
+    font-family: 'DM Mono', monospace;;
+    font-size: 1.0rem;
+   
+    
+    font-style: normal;
+    letter-spacing: 0em;
+   
+}
+
+
+
+ .about-background-container {
+  
+    padding:0;
+    margin:0;
+    min-height: 80vh;
+    font-family: var(--main-font);
+    color: var(--main-font-color);
+  }
+
+ 
+  @media screen and (max-width: 992px) {
+
+    div.card-horizontal-about {
+    
+      display: flex;
+      flex-direction:column-reverse;
+      
+      height: max-content;
+      max-height: min-content;
+      
+  }
+    div.card-about {
+      width: 90%;
+      
+    }
+
+    div#about-card-img#about-card-img {
+   
+      width: 100%;
+     height: auto;
+     max-width: 100%;
+     padding-bottom: 0%;
+    }
+
+    div.card-body-about {
+      width: 100%;
+      padding:0%;
+     margin:0%;
+        
+         
+    }
+
+    div h5.card-title-about {
+      padding-top: 1em;
+    
+      
+    }
+
+      /* because parent ( content-footer-container ) is absolute */
     /* shift this element down unless it will be cover by Nav */
     .about {
         padding-top: calc(5em + 0vh);
         margin-top: calc(0em + 5vh);
     }
+ 
 
   }
+
+
+  div.card-about {
+    width: 90%;
+    max-width: max-content;
+ 
+    background-color: var(--main-bg-color);
+    
+    border: 0;
+   
+   }
+ 
+   .card-horizontal-about {
+     display: flex;
+     flex-direction: row-reverse;
+   /*  flex: 1 1 auto;*/
+     height: max-content;
+     width: 100%;
+ 
+     background-color: var(--main-bg-color);
+     
+ }
+ 
+ #about-card-img#about-card-img {
+   width:50%;
+   height:auto;
+   flex: 1 1 50%;
+   max-width: 650px;
+   background-color: var(--main-bg-color);
+   
+ }
+ 
+ .card-body-about {
+   width: 50%;
+   max-width: 650px;
+   flex: 1 1 50%;
+   background-color: var(--main-bg-color);
+   max-height: 100%;
+ 
+ }
+ 
+ .card-body-about p {
+  
+   font-size: calc((0.5) * 0.3vw + 0.8rem);
+   font-weight: 600;
+   letter-spacing: 1.7px;
+  
+ }
+ 
+ .card-body-about h5 {
+  
+   font-size: calc((0.6) * 1vw + 0.9rem);
+   font-weight: 800;
+   letter-spacing: 1.7px;
+  
+ }
+ 
+ h5.card-title-about {
+   padding-top:5%;
+   margin-bottom: 15%;
+   letter-spacing: 4.7px;
+   font-weight:900;
+ }
+ 
+
+#book-private-dinner-button {
+    height: 6em;
+    width: fit-content;
+    border-width: 2.5px;
+    font-family: var(--main-font);
+    font-size: 1rem;
+    font-weight: 800;
+    letter-spacing: 1.7px;
+    color:rgb(0, 0, 0);
+    
+    
+  }
+  
+  .text-book-private-dinner-button {
+      padding-left: 2em;
+      padding-right: 2em;
+     
+  
+     
+  }
+  
+  
+  #book-private-dinner-button:hover {
+      color:whitesmoke;
+  
+  }
+
+
+  .about-carousel-img {
+    object-fit: cover;
+    width:100%;
+  }
+
+  .carousel-inner > .carousel-item {
+    height: 700px;
+ }
