--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -14,7 +14,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100% 0%;
-  
+    min-height: 100vh;
   
     font-family: var(--main-font);
     color: var(--main-font-color);
