--- a/src/components/About.css
+++ b/src/components/About.css
@@ -174,6 +174,8 @@ div p.card-text-about {
   
   #book-private-dinner-button:hover {
       color:whitesmoke;
+    background-color: var(--main-font-color);
+
   
   }
 
