--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@ main {
   --main-font-color:  rgb(57, 37, 23);
   --footer-bg-color:  rgb(54, 37, 23);
   --footer-font-color: rgb(179, 124, 107);
+  --faqs-btn-border-color: rgb(186, 170, 156);
+
 
 
 
