--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -185,7 +185,8 @@ h5.card-title-home {
   letter-spacing: 1.7px;
   color:rgb(0, 0, 0);
   
-  
+  display:grid ;
+  place-items: center;
 }
 
 .text-dinner-button {
