finish upload to azure and fixed bug

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -168,6 +168,7 @@ div p.card-text-about {
   .text-book-private-dinner-button {
       padding-left: 2em;
       padding-right: 2em;
+    color:var(--main-font);
      
   
      
