--- a/src/components/ChefDetail.css
+++ b/src/components/ChefDetail.css
@@ -167,6 +167,7 @@
     font-weight: 800;
     letter-spacing: 1.7px;
     color:var( --footer-font-color);
+    text-decoration-color: var( --footer-font-color);
     
     display: grid;
     place-items: center;
@@ -177,7 +178,8 @@
       padding-left: 2em;
       padding-right: 2em;
      
-  
+      color:var(--footer-font-color);
+
      
   }
   
